--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <li><a href="#">Поселки</a></li>
                 <li><a href="./partnership.html">Партнёрство</a></li>
                 <li><a href="#">Владельцам</a></li>
+                <li><a href="#">Контакты</a></li>
             </ul>
             <div class="header-social d-flex align-center">
                 <div class="d-flex">
@@ -49,6 +50,7 @@
                 <li><a href="#">Поселки</a></li>
                 <li><a href="./partnership.html">Партнёрство</a></li>
                 <li><a href="#">Владельцам</a></li>
+                <li><a href="#">Контакты</a></li>
             </ul>
         </div>
     </header>
